--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,13 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://blog.wuyuxi.cn
-permalink: :year/:month/:day/:title/   
+# permalink: :year/:month/:day/:title/   
 # permalink: :title-:hash/
-# abbrlink:
-#   alg: crc32
-#   rep: hex
+permalink: post/:abbrlink.html # post为自定义前缀
+abbrlink:
+  alg: crc32   #算法： crc16(default) and crc32
+  rep: hex     #进制： dec(default) and hex
+
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
