--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "hexo": "^6.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-algoliasearch": "^1.0.0",
     "hexo-bilibili-bangumi": "^1.8.9",
+    "hexo-blog-encrypt": "^3.1.9",
     "hexo-butterfly-envelope": "^1.0.15",
+    "hexo-butterfly-tag-plugins-plus": "^1.0.17",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
