--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -949,7 +949,7 @@ rightside_item_order:
 
 # medium-zoom
 # https://github.com/francoischalifour/medium-zoom
-medium_zoom: true
+medium_zoom: false
 
 # fancybox
 # http://fancyapps.com/fancybox/3/
