--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -186,7 +186,7 @@ cover:
 # Replace Broken Images (替换无法显示的图片)
 error_img:
   flink: /img/friend_404.gif
-  post_page: /img/404.jpg
+  post_page: /img/404.svg
 
 # A simple 404 page
 error_404:
@@ -288,7 +288,7 @@ post_edit: # 目前仅可选择一个平台在线编辑
 # Related Articles
 related_post:
   enable: true
-  limit: 6 # Number of posts displayed
+  limit: 4 # Number of posts displayed
   date_type: created # or created or updated 文章日期显示创建日或者更新日
 
 # figcaption (图片描述文字)
