🎉 INT COMMIT: 优化完成

--- a/source/_data/album.yml
+++ b/source/_data/album.yml
@@ -51,7 +51,7 @@
   album_list:
     - date: 2022-10-24
       content: 动物
-      address: 各地
+      address: 各地动物
       from: yubo1
       image:
         - https://pic.netbian.com/uploads/allimg/231006/184010-16965888103766.jpg
