--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -176,7 +176,7 @@ cover:
   archives_enable: true
   # the position of cover in home page (封面显示的位置)
   # left/right/both
-  position: both
+  position: left
   # When cover is not set, the default cover is displayed (当没有设置cover时，默认的封面显示)
   default_cover:
     - /img/autumn.png
@@ -672,7 +672,7 @@ h2Divider: true
 table_interlaced_discoloration: true
 
 # 首页双栏显示
-article_double_row: false
+article_double_row: true
 
 # The top_img settings of home page
 # default: top img - full screen, site info - middle (默认top_img全屏，site_info在中间)
