--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -1,6 +1,6 @@
 - class_name: 关于页
   subtitle: 希望明天，像过往的那一刻🎉
-  avatarImg: https://blog.wuyuxi.cn/img/avatar.png
+  avatarImg: https://cdnjson.com/images/2023/06/04/avatar.png
   avatarSkills:
     left:
       - 🤖️ 数码科技爱好者
