🎉 INT COMMIT:  优化

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Qing
-subtitle: '你侬我侬，忒煞情多'
-description: '情多处，热如火。 把一块泥，捻一个你，塑一个我。 将咱两个，一齐打破，用水调和。 再捻一个你，再塑一个我。 我泥中有你，你泥中有我。 与你生同一个衾，死同一个椁。　 '
+subtitle: '我明白你会来，所以我等。'
+description: '一年中和一生中的秋天，时光很短暂，但是更加晴朗而缺少变化。 我也想杀死伤痛，让那恩怨有始有终。就像那句狠话：有一天，我一定会后悔的。'
 keywords:
 author: Qing
 language: zh-CN
