--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -20,7 +20,7 @@
     - name: Qing
       link: https://blog.wuyuxi.cn/
       avatar: https://cdnjson.com/images/2023/06/04/avatar.png
-      descr: 你侬我侬，忒煞情多
+      descr: 恰沐春风共同游，终只叹，木已舟。 
       siteshot: https://cdnjson.com/images/2023/11/13/image254ba6fbd7eaeb6b.png
       color: speed
       tag: 生活
