--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -117,8 +117,11 @@ algolia_search:
     hits_empty: "我们没有找到任何搜索结果: ${query}"
     hits_stats: "找到${hits}条结果（用时${time} ms）"
   tags:
-    # - 前端
-    # - Hexo
+    - 诗歌
+    - 白月光
+    - 软件测试
+    - Mac
+
 
 # Docsearch
 # Apply and Docs: see https://docsearch.algolia.com/
@@ -1090,10 +1093,12 @@ home_top:
     swiper_css: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/swiper/swiper.min.css #swiper css依赖
     swiper_js: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.0/swiper/swiper.min.js #swiper js依赖
   banner: # 首页右侧轮播图
-    tips: 你侬我侬
+    tips: 逆风而行
     title: 旅思秋光，黯黯长安路。
     # image: /img/banner.webp # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
     image: http://aginnov-hk.oss-cn-hongkong.aliyuncs.com/ada887f9-8838-464f-b806-7df25688aba8.png  # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
+          #  https://pic.imgdb.cn/item/65521f45c458853aef14c665.jpg
+          #  https://pic.imgdb.cn/item/65521f5ac458853aef152e13.jpg
     link: /album # https://docs.anheyu.com/
 
 # 朋友圈配置
@@ -1257,7 +1262,6 @@ inject:
     # 自定义css
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="/css/custom.css">
-    - <link rel="stylesheet" href="/css/windmill.css">  # 引入标题风车效果
     - <link rel="stylesheet" href="/css/home.css">     # 首页文章卡片擦亮效果
   bottom:
     # 自定义js
