🎉 INT COMMIT: 优化

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -56,6 +56,11 @@
       avatar: https://img.cent1pedee.top/img/wechat.jpg
       descr: 如月之恒，如日之升。
       siteshot: https://img.cent1pedee.top/img/siteshot.png
+    - name: 理随`Blog
+      link: https://lisui.top/
+      avatar: https://s3.qjqq.cn/3/64de148060f7b.webp!color
+      descr: 生而无畏，战至终章。
+      siteshot: https://img.cent1pedee.top/img/siteshot.png
     - name: Ethan.Tzy
       link: https://fe32.top/
       avatar: https://bu.dusays.com/2022/05/02/626f92e193879.jpg
