自动部署添加搜索数据

--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -52,6 +52,7 @@ jobs:
           hexo clean
           hexo bangumi -u #bilibili番剧更新
           hexo generate
+          hexo algolia
           gulp
 
       - name: 部署到Github
