--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -37,16 +37,16 @@ nav:
           icon: /img/avatar.png
         - name: 我的音乐
           link: https://music.wuyuxi.cn
-          icon: /img/music.png
+          icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/music.svg
 
     - title: 设计优秀的网站
       item:
         - name: Apple
           link: https://www.apple.com.cn/
-          icon: /img/apple.png
+          icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/apple.svg
         - name: Github
           link: https://github.com/
-          icon: /img/github.png
+          icon: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/github.svg
     
     - title: 服务
       item:
@@ -188,20 +188,20 @@ cover:
   position: left
   # When cover is not set, the default cover is displayed (当没有设置cover时，默认的封面显示)
   default_cover:
-    - /img/autumn.png
-    - /img/play.png
-    - /img/flower.png
+    - https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/default01.jpg
+    - https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/default02.jpg
+    - https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/default03.webp
 
 # Replace Broken Images (替换无法显示的图片)
 error_img:
-  flink: /img/friend_404.gif
-  post_page: /img/404.svg
+  flink: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/friend_404.gif
+  post_page: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/404.svg
 
 # A simple 404 page
 error_404:
   enable: true
   subtitle: "请尝试站内搜索寻找文章"
-  background: /img/error_404.gif
+  background: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/error_404.gif
 
 post_meta:
   page: # Home Page
@@ -363,7 +363,7 @@ valine:
   guest_info: nick,mail,link # valine comment header info (nick/mail/link)
   recordIP: false # Record reviewer IP
   serverURLs: # This configuration is suitable for domestic custom domain name users, overseas version will be automatically detected (no need to manually fill in)
-  bg: /img/comment_bg.png # valine background
+  bg: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/comment_bg.png  # valine background
   emojiCDN: //i0.hdslb.com/bfs/emote/ # emoji CDN
   enableQQ: true # enable the Nickname box to automatically get QQ Nickname and QQ Avatar
   requiredFields: nick,mail # required fields (nick/mail)
@@ -472,7 +472,7 @@ footer:
         message: 本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可
   socialBar:
     enable: true
-    centerImg: /img/1.gif   # 页脚头像
+    centerImg: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/footer.gif  # 页脚头像
     left:
       - title: email
         link: mailto:898581578@qq.com
@@ -1263,7 +1263,7 @@ inject:
     # 自定义css
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="/css/custom.css">
-    - <link rel="stylesheet" href="/css/home.css">     # 首页文章卡片擦亮效果
+    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/css/202311151408615.css">     # 首页文章卡片擦亮效果
   bottom:
     # 自定义js
     # - <script src="/js/xxx"></script>
