--- a/source/_data/equipment.yml
+++ b/source/_data/equipment.yml
@@ -47,5 +47,5 @@
         - name: 路易威登-montsouris
           specification: 深棕色
           description: MONTSOURIS双肩包是法国品牌路易威登（Louis Vuitton）推出的一款经典背包。该款背包以其简洁而时尚的设计，以及高品质的材料和精湛的工艺而闻名。
-          image: https://cdnjson.com/images/2023/10/29/montsouris.png
+          image: https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152232560.png
           link: https://www.louisvuitton.cn/zhs-cn/products/montsouris-backpack-a05-nvprod4480142v/M23099
